Blog update on May 29, 2024

--- a/_posts/2023-07-20-python.md
+++ b/_posts/2023-07-20-python.md
@@ -1,13 +1,12 @@
 ---
 layout: post
-title: Python
+title: Python Notes
 date: 2023-07-20 12:00
-description: Python Tutorial
+description: Python Notes
 tags: Python
 toc:
   sidebar: left
 giscus_comments: true
-featured: true
 ---
 
 <style>
@@ -27,6 +26,10 @@ table {
 
 th, td {
   padding: .5rem;
+}
+
+.post-title {
+  font-weight: 500;
 }
 </style>
 
