--- a/_posts/2024-04-15-DL.md
+++ b/_posts/2024-04-15-DL.md
@@ -31,6 +31,10 @@ table {
 th, td {
   padding: .5rem;
 }
+
+.post-title {
+  font-weight: 500;
+}
 </style>
 
 ## [Introduction to Generative AI - Coursera](https://www.coursera.org/learn/introduction-to-generative-ai)
